--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint-staged": "^15.2.4",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
