--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
@@ -27,8 +28,10 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.4",
     "prettier": "^3.2.5",
+    "prettifier": "^0.4.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "lint-staged": {
