--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "preview": "vite preview",
+    "preview": "tsc && vite build && build && vite preview",
     "build": "tsc && vite build",
     "dev": "vite --host --port 9990",
     "lint": "eslint --fix",
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^7.10.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -33,8 +34,10 @@
     "globals": "^15.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.4",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettifier": "^0.4.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0",
     "vite": "^5.2.11",
