--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@sindresorhus/string-hash": "^2.0.0",
     "fuse.js": "^7.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
@@ -21,6 +22,7 @@
     "@testing-library/vue": "^8.1.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-transition-group": "^4.4.10",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
