--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@sindresorhus/string-hash": "^2.0.0",
     "fuse.js": "^7.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-transition-group": "^4.4.5"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
